Fix nearly all errors